// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineCaptions /> should render properly with a track enabled 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #73b61c;
  background-color: transparent;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg,
.emotion-1 .noop svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #73b61c;
  background-color: #2e2e2e;
}

.emotion-2 {
  width: 4px;
}

.emotion-3 {
  position: relative;
  height: 100%;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg,
.emotion-4 .noop svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true],
.emotion-4 .noop {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-5 {
  width: 2px;
  background-color: #191919;
  margin: 4px;
}

<div
  className="emotion-0"
>
  <button
    aria-label="Disable Captions"
    className="emotion-1"
    onClick={[Function]}
    type="button"
  >
    <svg
      data-file-name="captions.svg"
      height={20}
    />
  </button>
  <div
    className="emotion-2"
  />
  <div
    className="emotion-3"
  >
    <button
      aria-label="Toggle Captions Menu"
      className="actions emotion-4"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="gear.svg"
        height={20}
      />
    </button>
  </div>
  <div
    className="emotion-5"
  />
</div>
`;

exports[`<TimelineCaptions /> should render properly with no track enabled 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg,
.emotion-1 .noop svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-2 {
  width: 4px;
}

.emotion-3 {
  position: relative;
  height: 100%;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus,
.emotion-4 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg,
.emotion-4 .noop svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true],
.emotion-4 .noop {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-5 {
  width: 2px;
  background-color: #191919;
  margin: 4px;
}

<div
  className="emotion-0"
>
  <button
    aria-label="Enable Captions"
    className="emotion-1"
    onClick={[Function]}
    type="button"
  >
    <svg
      data-file-name="captions.svg"
      height={20}
    />
  </button>
  <div
    className="emotion-2"
  />
  <div
    className="emotion-3"
  >
    <button
      aria-label="Toggle Captions Menu"
      className="actions emotion-4"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="gear.svg"
        height={20}
      />
    </button>
  </div>
  <div
    className="emotion-5"
  />
</div>
`;
